--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "lisa091500 <714402934@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --open --hot --host 0.0.0.0",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
